[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/BookVR.gd" type="Script" id=1]
[ext_resource path="res://scenes/Page.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PageAnimation.tscn" type="PackedScene" id=3]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="QuadMesh" id=2]

[sub_resource type="ConcavePolygonShape" id=11]
data = PoolVector3Array( -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, 0.5, -0.5, 0 )

[sub_resource type="SpatialMaterial" id=3]

[sub_resource type="QuadMesh" id=4]

[sub_resource type="ConcavePolygonShape" id=12]
data = PoolVector3Array( -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, 0.5, -0.5, 0 )

[sub_resource type="SpatialMaterial" id=5]

[sub_resource type="SpatialMaterial" id=6]

[sub_resource type="SpatialMaterial" id=7]

[sub_resource type="QuadMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]

[sub_resource type="QuadMesh" id=10]

[node name="BookVR" type="ARVROrigin"]
script = ExtResource( 1 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 3 )
shadow_enabled = true
shadow_bias = 0.01
omni_shadow_mode = 0
omni_shadow_detail = 0

[node name="ARVRCamera" type="ARVRCamera" parent="."]
current = true

[node name="RayCast" type="RayCast" parent="ARVRCamera"]
enabled = true
exclude_parent = false
cast_to = Vector3( 0, 0, -10 )

[node name="Book" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1.45758, 0.258819, 0, -0.390558, 0.965926, 0, 1.85, -1 )

[node name="Static" type="Spatial" parent="Book"]

[node name="PageLeft" type="MeshInstance" parent="Book/Static"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Book/Static/PageLeft" groups=[
"flip_left",
]]

[node name="CollisionShape" type="CollisionShape" parent="Book/Static/PageLeft/StaticBody"]
shape = SubResource( 11 )

[node name="PageRight" type="MeshInstance" parent="Book/Static"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Book/Static/PageRight" groups=[
"flip_right",
]]

[node name="CollisionShape" type="CollisionShape" parent="Book/Static/PageRight/StaticBody"]
shape = SubResource( 12 )

[node name="Turning" parent="Book" instance=ExtResource( 3 )]
visible = false

[node name="Back" parent="Book/Turning/Page" index="1"]
material_override = SubResource( 5 )

[node name="Front" parent="Book/Turning/Page" index="2"]
material_override = SubResource( 6 )

[node name="PageLeft" type="MeshInstance" parent="Book/Turning"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 7 )
mesh = SubResource( 8 )
material/0 = null

[node name="PageRight" type="MeshInstance" parent="Book/Turning"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
material_override = SubResource( 9 )
mesh = SubResource( 10 )
material/0 = null

[node name="Viewport1" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport1" instance=ExtResource( 2 )]
textured = true

[node name="Viewport2" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport2" instance=ExtResource( 2 )]
textured = true

[node name="Viewport3" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport3" instance=ExtResource( 2 )]
textured = true

[node name="Viewport4" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport4" instance=ExtResource( 2 )]
textured = true

[node name="Viewport5" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport5" instance=ExtResource( 2 )]
textured = true

[node name="Viewport6" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport6" instance=ExtResource( 2 )]
textured = true
[connection signal="animation_finished" from="Book/Turning/Page/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Book/Turning"]
